2014-07-31  Tanay C  <tanay.c@samsung.com>

        Build warning in webkit/Source/JavaScriptCore/llint/LLIntSlowPaths.cpp
        https://bugs.webkit.org/show_bug.cgi?id=135414

        Reviewed by Csaba Osztrogonác.

        * llint/LLIntSlowPaths.cpp:
        (JSC::LLInt::putToScopeCommon):removed unused parameter from function definition

2014-07-30  Filip Pizlo  <fpizlo@apple.com>

        NewFunctionExpression and NewFunctionNoCheck should setHaveStructures(true)
        https://bugs.webkit.org/show_bug.cgi?id=135430

        Reviewed by Mark Hahnenberg.

        We already handled this correctly after the ftlopt merge, but it's useful to have the test.

        * tests/stress/new-function-expression-has-structures.js: Added.
        (foo.f):
        (foo.f.prototype.f):
        (foo):

2014-07-30  Andreas Kling  <akling@apple.com>

        Speculative Windows build fix.

        Try to dllimport the dllexported global object HashTable.

        * jsc.cpp:
        * testRegExp.cpp:

2014-07-30  Andreas Kling  <akling@apple.com>

        PropertyName's internal string is always atomic.
        <https://webkit.org/b/135451>

        Now that we've merged the JSC::Identifier and WTF::AtomicString tables,
        we know that any string that's an Identifier is guaranteed to be atomic.

        A PropertyName can be either an Identifier or a PrivateName, and the
        private names are also guaranteed to be atomic internally.

        Make PropertyName vend AtomicStringImpl* instead of StringImpl*.

        Reviewed by Benjamin Poulain.

        * runtime/PropertyName.h:
        (JSC::PropertyName::PropertyName):
        (JSC::PropertyName::uid):
        (JSC::PropertyName::publicName):

2014-07-30  Andy Estes  <aestes@apple.com>

        USE(CONTENT_FILTERING) should be ENABLE(CONTENT_FILTERING)
        https://bugs.webkit.org/show_bug.cgi?id=135439

        Reviewed by Tim Horton.
